--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
         </a-asset-item>
       </a-assets>
 
-      <!-- <a-marker
-        preset="hiro"
+      <a-marker
+        preset="custom"
+        url="/logo.patt"
         raycaster="objects: .clickable"
         emitevents="true"
         cursor="fuse: false; rayOrigin: mouse;"
         id="markerA"
-      > -->
-      <a-marker-camera preset='custom' type='pattern' url='logo.patt'>
+      >
         <a-entity
           id="bowser-model"
           gltf-model="#bowser"
@@ -47,8 +47,7 @@
           gesture-handler
         >
         </a-entity>
-      </a-marker-camera>
-      <!-- </a-marker> -->
+      </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
   </body>
