--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </a-assets>
 
       <a-marker
-        preset="custom"
+        preset="hiro"
         raycaster="objects: .clickable"
         emitevents="true"
         cursor="fuse: false; rayOrigin: mouse;"
@@ -47,7 +47,6 @@
         >
         </a-entity>
       </a-marker>
-      <a-marker-camera preset='custom' type='pattern' url='logo.patt'></a-marker-camera>
       <a-entity camera></a-entity>
     </a-scene>
   </body>
