--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         cursor="fuse: false; rayOrigin: mouse;"
         id="markerA"
       >
-        <a-entity
+        <!-- <a-entity
           id="bowser-model"
           gltf-model="#bowser"
           position="0 0 0"
@@ -45,6 +45,13 @@
           class="clickable"
           gesture-handler
         >
+        </a-entity> -->
+        <a-entity 
+            collada-model=”url(/diceCollada.dae)”
+            position="0 0 0"
+            scale="0.05 0.05 0.05"
+            class="clickable"
+            gesture-handler>
         </a-entity>
       </a-marker>
       <a-entity camera></a-entity>
