--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         >
         </a-entity> -->
         <a-entity 
-            collada-model=”url(/diceCollada.dae)”
+            collada-model=”url(diceCollada.dae)”
             position="0 0 0"
             scale="0.05 0.05 0.05"
             class="clickable"
